# lazytorch

./: README.md  lazytorch.py  pyproject.toml
.github/workflows/: publish.yml
src/lazytorch/: __init__.py
